--- a/vignettes/ggpie.Rmd
+++ b/vignettes/ggpie.Rmd
@@ -12,7 +12,8 @@ vignette: >
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  dpi=60
 )
 ```
 
@@ -340,7 +341,7 @@ cowplot::plot_grid(p1,p2)
 <hr />
 
 ## Contributing
-Please note that the `ggpie` project is released with a [Contributor Code of Conduct](CODE_OF_CONDUCT.md). By contributing to this project, you agree to abide by its terms.
+Please note that the `ggpie` project is released with a [Contributor Code of Conduct](https://www.contributor-covenant.org/version/1/0/0/code-of-conduct/). By contributing to this project, you agree to abide by its terms.
 
 <br />
 
