--- a/vignettes/ggpie.Rmd
+++ b/vignettes/ggpie.Rmd
@@ -33,7 +33,7 @@ knitr::opts_chunk$set(
 <hr />
 
 ## Installation
-You can install the released version of `ggpie` from [CRAN](https://cran.r-project.org/web/packages/ggpie/index.html) with:
+You can install the released version of `ggpie` from [CRAN](https://cran.r-project.org/package=ggpie) with:
 
 ```{r cran_install, eval=FALSE, message=FALSE, warning=FALSE}
 install.packages("ggpie")
