--- a/vignettes/ggpie.Rmd
+++ b/vignettes/ggpie.Rmd
@@ -78,14 +78,14 @@ ggpie(data = diamonds, group_key = "cut", count_type = "full",label_type = "none
 **circle label** and **out** of pie:
 ```{r pie_circle_out}
 ggpie(data = diamonds, group_key = "cut", count_type = "full",
-      label_info = "all", label_type = "circle",
+      label_info = c("count", "ratio"), label_type = "circle",
       label_size = 4, label_pos = "out")
 ```
 
 **circle label** and **in** pie plot, with **no split**:
 ```{r pie_circle_in_no_split}
 ggpie(data = diamonds, group_key = "cut", count_type = "full",
-      label_info = "all", label_type = "circle", label_split = NULL,
+      label_info = c("count", "ratio"), label_type = "circle", label_split = NULL,
       label_size = 4, label_pos = "in")
 ```
 
@@ -93,21 +93,21 @@ ggpie(data = diamonds, group_key = "cut", count_type = "full",
 **horizon label** and **in** pie plot, with **no split**:
 ```{r pie_horizon_in_no_split}
 ggpie(data = diamonds, group_key = "cut", count_type = "full",
-      label_info = "all", label_type = "horizon", label_split = NULL,
+      label_info = c("count", "ratio"), label_type = "horizon", label_split = NULL,
       label_size = 4, label_pos = "in")
 ```
 
 **horizon label** and **in** pie plot, **split with space**:
 ```{r pie_horizon_in_split}
 ggpie(data = diamonds, group_key = "cut", count_type = "full",
-      label_info = "all", label_type = "horizon",
+      label_info = c("count", "ratio"), label_type = "horizon",
       label_size = 4, label_pos = "in")
 ```
 
 **horizon label** and **out** pie plot, with **no split**:
 ```{r pie_horizon_out_no_split}
 ggpie(data = diamonds, group_key = "cut", count_type = "full",
-      label_info = "all", label_type = "horizon",
+      label_info = c("count", "ratio"), label_type = "horizon",
       label_size = 4, label_pos = "out" )
 ```
 
@@ -115,7 +115,7 @@ ggpie(data = diamonds, group_key = "cut", count_type = "full",
 With `label_threshold`, `ggpie` will move label below `label_threshold` to out of pie. In this example, all labels below 10% are moved to out of pie:
 ```{r pie_threashold_horizon_in}
 ggpie(data = diamonds, group_key = "cut", count_type = "full",
-      label_info = "all", label_type = "horizon", label_split = NULL,
+      label_info = c("count", "ratio"), label_type = "horizon", label_split = NULL,
       label_size = 4, label_pos = "in", label_threshold = 10)
 ```
 
@@ -132,14 +132,14 @@ ggdonut(data = diamonds, group_key = "cut", count_type = "full",label_type = "no
 **circle label** and **out** of pie:
 ```{r donut_circle_out}
 ggdonut(data = diamonds, group_key = "cut", count_type = "full",
-        label_info = "all", label_type = "circle",
+        label_info = c("count", "ratio"), label_type = "circle",
         label_size = 4, label_pos = "out")
 ```
 
 **circle label** and **in** pie plot, with **no split**:
 ```{r donut_circle_in_no_split}
 ggdonut(data = diamonds, group_key = "cut", count_type = "full",
-        label_info = "all", label_type = "circle", label_split = NULL,
+        label_info = c("count", "ratio"), label_type = "circle", label_split = NULL,
         label_size = 4, label_pos = "in")
 ```
 
@@ -147,28 +147,28 @@ ggdonut(data = diamonds, group_key = "cut", count_type = "full",
 **horizon label** and **in** pie plot, with **no split**:
 ```{r donut_horizon_in_no_split}
 ggdonut(data = diamonds, group_key = "cut", count_type = "full",
-        label_info = "all", label_type = "horizon", label_split = NULL,
+        label_info = c("count", "ratio"), label_type = "horizon", label_split = NULL,
         label_size = 4, label_pos = "in")
 ```
 
 **horizon label** and **in** pie plot:
 ```{r donut_horizon_in}
 ggdonut(data = diamonds, group_key = "cut", count_type = "full",
-        label_info = "all", label_type = "horizon",
+        label_info = c("count", "ratio"), label_type = "horizon",
         label_size = 4, label_pos = "in")
 ```
 
 **horizon label** and **out** of pie plot, with **no split**:
 ```{r donut_horizon_out_no_split}
 ggdonut(data = diamonds, group_key = "cut", count_type = "full",
-        label_info = "all", label_type = "horizon", label_split = NULL,
+        label_info = c("count", "ratio"), label_type = "horizon", label_split = NULL,
         label_size = 4, label_pos = "out")
 ```
 
 **horizon label** and **out** of pie plot:
 ```{r donut_horizon_out}
 ggdonut(data = diamonds, group_key = "cut", count_type = "full",
-        label_info = "all", label_type = "horizon",
+        label_info = c("count", "ratio"), label_type = "horizon",
         label_size = 4, label_pos = "out")
 ```
 
@@ -176,14 +176,14 @@ ggdonut(data = diamonds, group_key = "cut", count_type = "full",
 With `label_threshold`, `ggpie` will move label below `label_threshold` to out of donut. In this example, all labels below 10% are moved to out of donut:
 ```{r donut_threashold_horizon_in}
 ggdonut(data = diamonds, group_key = "cut", count_type = "full",
-        label_info = "all", label_type = "horizon", label_split = NULL,
+        label_info = c("count", "ratio"), label_type = "horizon", label_split = NULL,
         label_size = 4, label_pos = "in", label_threshold = 10)
 ```
 
 
 ```{r donut_threashold_horizon_in_no_split}
 ggdonut(data = diamonds, group_key = "cut", count_type = "full",
-        label_info = "all", label_type = "horizon",
+        label_info = c("count", "ratio"), label_type = "horizon",
         label_size = 4, label_pos = "in", label_threshold = 10)
 ```
 
